--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logos/logo.png" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="generator" content="Astro" />
     
     <!-- Título de la página -->
     <title>BuscaFM</title>
